@@ -1,0 +1,110 @@
+/* XPM */
+static char * icon_ffc_xpm[] = {
+"16 16 91 1",
+" 	c None",
+".	c #000000",
+"+	c #A9A943",
+"@	c #BFBF4B",
+"#	c #1A1A0A",
+"$	c #B6B648",
+"%	c #FCFC64",
+"&	c #EDED5E",
+"*	c #E5E55A",
+"=	c #75752E",
+"-	c #FAFA63",
+";	c #DBDB57",
+">	c #CBCB50",
+",	c #DADA56",
+"'	c #353515",
+")	c #7F7F32",
+"!	c #E9E95C",
+"~	c #B2B247",
+"{	c #D5D555",
+"]	c #E6E65B",
+"^	c #7A7A30",
+"/	c #E5E55B",
+"(	c #566A56",
+"_	c #738D73",
+":	c #738C73",
+"<	c #7B827B",
+"[	c #363615",
+"}	c #CACA4F",
+"|	c #28520F",
+"1	c #008F00",
+"2	c #009B00",
+"3	c #009100",
+"4	c #578357",
+"5	c #535353",
+"6	c #282810",
+"7	c #FEFE64",
+"8	c #FFFF65",
+"9	c #20450D",
+"0	c #00B000",
+"a	c #00B500",
+"b	c #009E00",
+"c	c #009200",
+"d	c #1D231D",
+"e	c #A8A942",
+"f	c #BEBF4A",
+"g	c #8F8F38",
+"h	c #004A00",
+"i	c #00A800",
+"j	c #009F00",
+"k	c #758F75",
+"l	c #005500",
+"m	c #005F00",
+"n	c #006000",
+"o	c #005E00",
+"p	c #005A00",
+"q	c #009000",
+"r	c #758E75",
+"s	c #00A600",
+"t	c #01AA01",
+"u	c #01A901",
+"v	c #00AB00",
+"w	c #00AA00",
+"x	c #009A00",
+"y	c #029002",
+"z	c #598359",
+"A	c #788778",
+"B	c #2B8E2B",
+"C	c #309230",
+"D	c #2F8F2F",
+"E	c #2C862C",
+"F	c #2D8B2D",
+"G	c #2B832B",
+"H	c #2A832A",
+"I	c #2A862A",
+"J	c #648164",
+"K	c #454545",
+"L	c #656565",
+"M	c #787878",
+"N	c #808080",
+"O	c #7E7E7E",
+"P	c #797979",
+"Q	c #4F4F4F",
+"R	c #5F5F5F",
+"S	c #818181",
+"T	c #737373",
+"U	c #383838",
+"V	c #6F6F6F",
+"W	c #7F7F7F",
+"X	c #7D7D7D",
+"Y	c #717171",
+"Z	c #525252",
+"                ",
+"   ......       ",
+"  .+@@@@+.      ",
+" #$%&**&%+.     ",
+" =--;>>;-,'     ",
+" )!~~~{~~]^     ",
+" ^%%&*/&%%^(_:< ",
+" [>-;>};->|12345",
+"  6!7777890abc45",
+"   ..def@ghij345",
+"     klmnop3bq45",
+"     rstuvwbxyz5",
+"     ABCDEFGHIJ5",
+"     KLLMNOPLLLQ",
+"        RSOTU   ",
+"       VMWOXYZ  "};
