@@ -4,6 +4,7 @@ version 0.11.0:
 	* Away messages arranged alphabetically (Thanks Justin)
 	* More GUI adjustments
 	* Can optionally run command to play sound files
+	* Icons for ICQ plugin (blatently stolen from GnomeICU)
 
 version 0.11.0-pre2 (12/04/2000):
 	* Fixed a segfault with a bad util.c 
